--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="page-container">
       <div class="amazon-header">
         <div class="amazon-header-left-section">
-          <a href="amazon.html" class="header-link">
+          <a href="index.html" class="header-link">
             <img class="amazon-logo"
               src="images/amazon-logo-white.png">
             <img class="amazon-mobile-logo"
